[gd_scene load_steps=7 format=3 uid="uid://bakg1fotj8i2j"]

[ext_resource type="Script" path="res://steps_counter.gd" id="1_v78cr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gxbk5"]
bg_color = Color(0.0117647, 0.180392, 0.215686, 1)
border_width_left = 1
border_width_top = 1
border_width_bottom = 1
border_color = Color(0.156863, 0.435294, 0.494118, 1)
corner_radius_top_left = 12
corner_radius_bottom_left = 12

[sub_resource type="LabelSettings" id="LabelSettings_x22aa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4mr3t"]
bg_color = Color(0.0117647, 0.180392, 0.215686, 1)
skew = Vector2(0.3, 0)
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.156863, 0.435294, 0.494118, 1)
expand_margin_left = 5.0
expand_margin_right = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xxl7d"]
bg_color = Color(0.0392157, 0.25098, 0.294118, 1)
skew = Vector2(0.3, 0)
border_width_left = 1
border_width_top = 1
border_width_bottom = 1
border_color = Color(0.156863, 0.435294, 0.494118, 1)
expand_margin_left = 1.0
expand_margin_right = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l3nao"]
bg_color = Color(0.0392157, 0.25098, 0.294118, 1)
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.156863, 0.435294, 0.494118, 1)
corner_radius_top_right = 12
corner_radius_bottom_right = 12

[node name="StepsCounter" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 26)
offset_right = 116.0
offset_bottom = 26.0
theme_override_constants/separation = 0
script = ExtResource("1_v78cr")

[node name="PanelContainer1" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_gxbk5")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer1"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_right = 6

[node name="CurrentLabel" type="Label" parent="PanelContainer1/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "01"
label_settings = SubResource("LabelSettings_x22aa")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(4, 26)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_4mr3t")

[node name="PanelContainer3" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(4, 26)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_xxl7d")

[node name="PanelContainer4" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_l3nao")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer4"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_right = 12

[node name="TotalLabel" type="Label" parent="PanelContainer4/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "10"
horizontal_alignment = 1
vertical_alignment = 1
